# black-hole-renderer

./: .clang-format  CMakeLists.txt  README.md  lefthook.yml
assets/: blackhole.frag.glsl  fullscreen.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
cmd/: run
src/: App.cpp  App.hpp  Window.cpp  Window.hpp  events.hpp  main.cpp
src/Layers/: Base.hpp  Dump.cpp  Dump.hpp
src/Layers/BlackHole/: Layer.cpp  Layer.hpp  Scene.cpp  Scene.hpp
src/Render/: Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Rendering/: AssetLoader.cpp  AssetLoader.hpp  Opengl.cpp  Opengl.hpp
src/Rendering/Shaders/: Base.cpp  Base.hpp  Frag.hpp  Vert.hpp
